test_regress/t/t_tagged_union.out
%Error-UNSUPPORTED: t/t_tagged_union.v:13:18: Unsupported: tagged union
   13 |    typedef union tagged {
      |                  ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tagged_union.v:14:7: Unsupported: void (for tagged unions)
   14 |       void Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:19:18: Unsupported: tagged union
   19 |    typedef union tagged packed {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:20:7: Unsupported: void (for tagged unions)
   20 |       void      Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:33:18: Unsupported: tagged union
   33 |    typedef union tagged {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:37:13: Unsupported: tagged union
   37 |       union tagged {
      |             ^~~~~~
%Error: t/t_tagged_union.v:52:13: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   52 |       vi1 = tagged Invalid;
      |             ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_tagged_union.v:53:13: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   53 |       vi2 = tagged Invalid;
      |             ^~~~~~
%Error: t/t_tagged_union.v:56:13: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   56 |       vi1 = tagged Valid (42);
      |             ^~~~~~
%Error: t/t_tagged_union.v:59:13: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   59 |       vi2 = tagged Valid (23 + 34);
      |             ^~~~~~
%Error: t/t_tagged_union.v:63:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   63 |       mt = tagged Invalid;
      |            ^~~~~~
%Error: t/t_tagged_union.v:65:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   65 |       mt = tagged IntVal (32'h12345678);
      |            ^~~~~~
%Error: t/t_tagged_union.v:68:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   68 |       mt = tagged ShortVal (16'hABCD);
      |            ^~~~~~
%Error: t/t_tagged_union.v:71:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   71 |       mt = tagged ByteVal (8'h5A);
      |            ^~~~~~
%Error: t/t_tagged_union.v:74:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   74 |       mt = tagged BitVal (1'b1);
      |            ^~~~~~
%Error: t/t_tagged_union.v:77:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   77 |       mt = tagged Byte8 (8'hFF);
      |            ^~~~~~
%Error: t/t_tagged_union.v:80:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   80 |       mt = tagged Word16 (16'h1234);
      |            ^~~~~~
%Error: t/t_tagged_union.v:83:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   83 |       mt = tagged Word32 (32'hDEADBEEF);
      |            ^~~~~~
%Error: t/t_tagged_union.v:88:15: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   88 |       instr = tagged Add '{5'd1, 5'd2, 5'd3};
      |               ^~~~~~
%Error: t/t_tagged_union.v:94:15: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   94 |       instr = tagged Add '{reg2:5'd10, regd:5'd20, reg1:5'd5};
      |               ^~~~~~
%Error: t/t_tagged_union.v:100:15: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  100 |       instr = tagged Jmp (tagged JmpU 10'd512);
      |               ^~~~~~
%Error: t/t_tagged_union.v:104:15: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  104 |       instr = tagged Jmp (tagged JmpC '{2'd1, 10'd256});
      |               ^~~~~~
%Error: t/t_tagged_union.v:109:15: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  109 |       instr = tagged Jmp (tagged JmpC '{cc:2'd3, addr:10'd100});
      |               ^~~~~~
%Error: Exiting due to
